Fixed view of SliderNew ProductCard on tablet (May 8) #8

--- a/src/Components/ProductCard/ProductCard.scss
+++ b/src/Components/ProductCard/ProductCard.scss
@@ -161,6 +161,10 @@
         .productcard__image {
             height: 250px;
         }
+
+        .productcard__info {
+            padding: 20px 30px 30px 20px;
+        }
     }
 }
 
@@ -192,6 +196,32 @@
 
     .colors__border {
         padding: 2px;
+    }
+}
+
+@media (max-width: 950px) {
+    .productcard.new {
+        .productcard__image {
+            height: 150px;
+        }
+
+        .productcard__info {
+            padding: 5px 10px;
+            height: 100px;
+        }
+      
+        .colors__dot {
+            height: 10px;
+            width: 10px;
+        }
+
+        .colors__border, .colors__border--active {
+            padding: 2px;
+        }
+
+        .productcard__title {
+            margin: 0;
+        }
     }
 }
 
@@ -255,30 +285,6 @@
         .productcard__info {
             height: 95px;
             padding-top: 10px;
-        }
-    }
-
-    .productcard.new {
-        .productcard__image {
-            height: 150px;
-        }
-
-        .productcard__info {
-            padding: 5px 10px;
-            height: 100px;
-        }
-      
-        .colors__dot {
-            height: 10px;
-            width: 10px;
-        }
-
-        .colors__border, .colors__border--active {
-            padding: 2px;
-        }
-
-        .productcard__title {
-            margin: 0;
         }
     }
 }
